--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Custom Mocha reporter with spinners and progress reporting ability",
   "main": "index.js",
   "scripts": {
-    "prepublishOnly": "node ./node_modules/typescript/bin/tsc --build",
+    "start": "node ./node_modules/typescript/bin/tsc --build",
+    "prepublishOnly": "npm start",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -28,7 +29,8 @@
   "dependencies": {
     "chalk": "^4.1.0",
     "mocha": "^8.2.1",
-    "ora": "^5.3.0"
+    "ora": "^5.3.0",
+    "strip-ansi": "^6.0.0"
   },
   "devDependencies": {
     "@types/mocha": "^8.2.0",
